[project]
name = "screenuler"
version = "0.1"
authors = [
    { name="vkalyvayut-roboty-a-ne-chelovek" }
]
description = "Simple Python Tkinter screen ruler"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/vkalyvayut-roboty-a-ne-chelovek/screenuler"
Issues = "https://github.com/vkalyvayut-roboty-a-ne-chelovek/screenuler/issues"